K8S/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "pilgrimage_project"
  namespace: "pilgrimage"
  labels:
    app: "frontend"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "frontend"
  template:
    metadata:
      labels:
        app: "frontend"
    spec:
      containers:
        - name: "pilgrimage_project"
          image: "845242191149.dkr.ecr.ap-south-2.amazonaws.com/vijay-ecr:IMAGE_ID"
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
