K8S/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "pilgrimage_project"
  namespace: "pilgrimage"
  labels:
    app: "frontend"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 5000
  selector:
    app: "frontend"
  type: "ClusterIP"
