K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pilgrimage_project
  namespace: pilgrimage

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-2:845242191149:certificate/c7411fe4-9c47-4e1c-90fb-751a89da25f2
spec:
  ingressClassName: alb
  rules:
  - host: pilgrimage.vijayakrishna.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pilgrimage_project
            port:
              number: 80
